@@ -20,7 +20,8 @@ namespace ModernKeePass.Converters
 
         public object ConvertBack(object value, Type targetType, object parameter, string language)
         {
-            throw new NotImplementedException();
+            var brush = value as SolidColorBrush;
+            return brush == null ? new Color() : Color.FromArgb(brush.Color.A, brush.Color.R, brush.Color.G, brush.Color.B);
         }
     }
 }
