@@ -170,6 +170,9 @@
     <Compile Include="Views\UserControls\BreadCrumbUserControl.xaml.cs">
       <DependentUpon>BreadCrumbUserControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\UserControls\ColorPickerUserControl.xaml.cs">
+      <DependentUpon>ColorPickerUserControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\UserControls\CompositeKeyUserControl.xaml.cs">
       <DependentUpon>CompositeKeyUserControl.xaml</DependentUpon>
     </Compile>
@@ -264,6 +267,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\UserControls\BreadCrumbUserControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserControls\ColorPickerUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
